--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -21,6 +21,9 @@
         <p>
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">@Localizer["Delete"]</a>
         </p>
+        <p>
+            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">@Localizer["Company"]</a>
+        </p>
     </div>
 </div>
 
