--- a/Pages/Company/Index.cshtml
+++ b/Pages/Company/Index.cshtml
@@ -16,7 +16,7 @@
                     <h1>@Localizer["Company"]</h1>
 
                     <p>
-                        <a asp-page="Create">@Localizer["Создать"]</a>
+                        <a asp-page="Create">@Localizer["Create"]</a>
                     </p>
 
                     <form asp-page="./Index" method="get">
