--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -55,20 +55,26 @@
             <th>
                 @Html.DisplayNameFor(model => model.Company[0].Title)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Company[0].EnrollmentDate)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model.Company)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CompanyID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CompanyID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EnrollmentDate)
+            </td>
+        </tr>
         }
     </tbody>
 </table>
