--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
                         </li>
                         <li class="nav-item">
-                            <button id="theme-button" type="button" name="Topic" class="form-control">@Localizer["Change the subject"]</button>
+                            <button id="theme-button" type="button" name="Topic" class="form-control">@Localizer["Topic"]</button>
                         </li>
                         <li class="nav-item">
-                            <button type="language-button" name="Language" class="form-control">@Localizer["Change the language"]</button>
+                            <button id="language-button" type="button" name="Language" class="form-control">@Localizer["Language"]</button>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
