--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -19,101 +19,120 @@
 
                     <h4>@Localizer["Company"]</h4>
                     <hr />
-                    <form method="post" class="row g-3">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Title" class="control-label">@Localizer["Title"]</h5>
-                                <input asp-for="Company.Title" class="form-control" />
-                                <span asp-validation-for="Company.Title" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.EnrollmentDate" class="control-label">@Localizer["Enrollment Date"]</h5>
-                                <input asp-for="Company.EnrollmentDate" class="form-control" />
-                                <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Thematics" class="control-label">@Localizer["Thematics"]</h5>
-                                <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
-                                    <option selected>@Localizer["Choose the topic of your company"]</option>
-                                    <option>@Localizer["Education"]</option>
-                                    <option>@Localizer["Animals"]</option>
-                                    <option>@Localizer["Human rights"]</option>
-                                    <option>@Localizer["Nature"]</option>
-                                    <option>@Localizer["Culture"]</option>
-                                    <option>@Localizer["Game"]</option>
-                                    <option>@Localizer["Other"]</option>
-                                </select>
-                                <span asp-validation-for="Company.Thematics" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Bonus" class="control-label">@Localizer["Bonus"]</h5>
-                                <input asp-for="Company.Bonus" class="form-control" />
-                                <span asp-validation-for="Company.Bonus" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Description" class="control-label">@Localizer["Description"]</h5>
-                                <textarea asp-for="Company.Description" class="form-control"></textarea>
-                                <span asp-validation-for="Company.Description" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Images" class="control-label">@Localizer["Images"]</h5>
-                                <div class="mb-3">
-                                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form method="post" class="row g-3">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.CompanyID" class="control-label">@Localizer["CompanyID"]</label>
+                                        <input asp-for="Company.CompanyID" class="form-control" />
+                                        <span asp-validation-for="Company.CompanyID" class="text-danger"></span>
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Title" class="control-label">@Localizer["Title"]</label>
+                                        <input asp-for="Company.Title" class="form-control" />
+                                        <span asp-validation-for="Company.Title" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Rating" class="control-label">@Localizer["Rating"]</label>
+                                        <input asp-for="Company.Rating" class="form-control" />
+                                        <span asp-validation-for="Company.Rating" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.EnrollmentDate" class="control-label">@Localizer["Enrollment Date"]</label>
+                                        <input asp-for="Company.EnrollmentDate" class="form-control" />
+                                        <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <div class="form-group">
+                                            <h5 asp-for="Company.Thematics" class="control-label">@Localizer["Thematics"]</h5>
+                                            <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
+                                                <option selected>@Localizer["Choose the topic of your company"]</option>
+                                                <option>@Localizer["Education"]</option>
+                                                <option>@Localizer["Animals"]</option>
+                                                <option>@Localizer["Human rights"]</option>
+                                                <option>@Localizer["Nature"]</option>
+                                                <option>@Localizer["Culture"]</option>
+                                                <option>@Localizer["Game"]</option>
+                                                <option>@Localizer["Other"]</option>
+                                            </select>
+                                            <span asp-validation-for="Company.Thematics" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Bonus" class="control-label">@Localizer["Bonus"]</label>
+                                        <input asp-for="Company.Bonus" class="form-control" />
+                                        <span asp-validation-for="Company.Bonus" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Description" class="control-label">@Localizer["Description"]</label>
+                                        <input asp-for="Company.Description" class="form-control" />
+                                        <span asp-validation-for="Company.Description" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Images" class="control-label">@Localizer["Images"]</label>
+                                        <input asp-for="Company.Images" class="form-control" />
+                                        <span asp-validation-for="Company.Images" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Video" class="control-label">@Localizer["Video"]</label>
+                                        <input asp-for="Company.Video" class="form-control" />
+                                        <span asp-validation-for="Company.Video" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Topic" class="control-label">@Localizer["Topic"]</label>
+                                        <input asp-for="Company.Topic" class="form-control" />
+                                        <span asp-validation-for="Company.Topic" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <label asp-for="Company.News" class="control-label">@Localizer["News"]</label>
+                                        <input asp-for="Company.News" class="form-control" />
+                                        <span asp-validation-for="Company.News" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Price" class="control-label">@Localizer["Price"]</label>
+                                        <input asp-for="Company.Price" class="form-control" />
+                                        <span asp-validation-for="Company.Price" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label asp-for="Company.Tags" class="control-label">@Localizer["Tags"]</label>
+                                        <input asp-for="Company.Tags" class="form-control" />
+                                        <span asp-validation-for="Company.Tags" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <input type="submit" value="Create" class="btn btn-primary" />
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Video" class="control-label">@Localizer["Video"]</h5>
-                                <input asp-for="Company.Video" class="form-control" />
-                                <span asp-validation-for="Company.Video" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Topic" class="control-label">@Localizer["Topic"]</h5>
-                                <input asp-for="Company.Topic" class="form-control" />
-                                <span asp-validation-for="Company.Topic" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-group">
-                                <h5 asp-for="Company.News" class="control-label">@Localizer["News"]</h5>
-                                <textarea asp-for="Company.News" class="form-control"></textarea>
-                                <span asp-validation-for="Company.News" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Price" class="control-label">@Localizer["Price"]</h5>
-                                <input asp-for="Company.Price" class="form-control" />
-                                <span asp-validation-for="Company.Price" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <h5 asp-for="Company.Tags" class="control-label">@Localizer["Tags"]</h5>
-                                <input asp-for="Company.Tags" class="form-control" />
-                                <span asp-validation-for="Company.Tags" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-primary" />
-                            </div>
-                        </div>
-                    </form>
+                    </div>
                     <div>
                         <a asp-page="Index">@Localizer["Back to List"]</a>
                     </div>
