--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -21,7 +21,7 @@
                 @Html.DisplayNameFor(model => model.Company[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Company[0].Rating)
+                @Html.DisplayNameFor(model => model.Company[0].Rank)
             </th>
             <th></th>
         </tr>
@@ -37,7 +37,7 @@
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Rating)
+                    @Html.DisplayFor(modelItem => item.Rank)
                 </td>
             </tr>
         }
@@ -56,7 +56,7 @@
                 @Html.DisplayNameFor(model => model.Company[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Company[0].EnrollmentDate)
+                @Html.DisplayNameFor(model => model.Company[0].Update)
             </th>
             <th></th>
         </tr>
@@ -72,7 +72,7 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EnrollmentDate)
+                @Html.DisplayFor(modelItem => item.Update)
             </td>
         </tr>
         }
