--- a/Pages/Company/Delete.cshtml
+++ b/Pages/Company/Delete.cshtml
@@ -29,10 +29,10 @@
                                 @Html.DisplayFor(model => model.Company.Title)
                             </dd>
                             <dt class="col-sm-2">
-                                @Html.DisplayNameFor(model => model.Company.Rating)
+                                @Html.DisplayNameFor(model => model.Company.Rank)
                             </dt>
                             <dd class="col-sm-10">
-                                @Html.DisplayFor(model => model.Company.Rating)
+                                @Html.DisplayFor(model => model.Company.Rank)
                             </dd>
                             <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.Company.EnrollmentDate)
