--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -27,22 +27,10 @@
                                 @Html.DisplayFor(model => model.Company.Title)
                             </dd>
                             <dt class="col-sm-2">
-                                @Html.DisplayNameFor(model => model.Company.Rating)
+                                @Html.DisplayNameFor(model => model.Company.Rank)
                             </dt>
                             <dd class="col-sm-10">
-                                @Html.DisplayFor(model => model.Company.Rating)
-                                <form class="rating-area">
-                                    <input type="radio" id="star-5" name="rating" value="5">
-                                    <label for="star-5" title="Оценка «5»"></label>
-                                    <input type="radio" id="star-4" name="rating" value="4">
-                                    <label for="star-4" title="Оценка «4»"></label>
-                                    <input type="radio" id="star-3" name="rating" value="3">
-                                    <label for="star-3" title="Оценка «3»"></label>
-                                    <input type="radio" id="star-2" name="rating" value="2">
-                                    <label for="star-2" title="Оценка «2»"></label>
-                                    <input type="radio" id="star-1" name="rating" value="1">
-                                    <label for="star-1" title="Оценка «1»"></label>
-                                </form>
+                                @Html.DisplayFor(model => model.Company.Rank)
                             </dd>
                             <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.Company.EnrollmentDate)
@@ -61,13 +49,6 @@
                             </dt>
                             <dd class="col-sm-10">
                                 @Html.DisplayFor(model => model.Company.Bonus)
-                            </dd>
-                            <dd>
-                                <form action="https://www.paypal.com/donate" method="post" target="_top">
-                                    <input type="hidden" name="hosted_button_id" value="NMUMHG7VQM4FL" />
-                                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                                    <img alt="" border="0" src="https://www.paypal.com/en_BY/i/scr/pixel.gif" width="1" height="1" />
-                                </form>
                             </dd>
                             <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.Company.Description)
@@ -116,6 +97,11 @@
                             </dt>
                         </dl>
                     </div>
+                    <form action="https://www.paypal.com/donate" method="post" target="_top">
+                        <input type="hidden" name="hosted_button_id" value="NMUMHG7VQM4FL" />
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                        <img alt="" border="0" src="https://www.paypal.com/en_BY/i/scr/pixel.gif" width="1" height="1" />
+                    </form>
                     <div>
                         <a asp-page="./Edit" asp-route-id="@Model.Company.ID">@Localizer["Edit"]</a> |
                         <a asp-page="./Index">@Localizer["Back to List"]</a>
