--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -22,7 +22,7 @@
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">@Localizer["Delete"]</a>
         </p>
         <p>
-            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">@Localizer["Company"]</a>
+            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
         </p>
     </div>
 </div>
