--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -37,13 +37,13 @@
                                         <span asp-validation-for="Company.Title" class="text-danger"></span>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                @*<div class="col-md-6">
                                     <div class="form-group">
                                         <label asp-for="Company.Rank" class="control-label">@Localizer["Rank"]</label>
                                         <input asp-for="Company.Rank" class="form-control" />
                                         <span asp-validation-for="Company.Rank" class="text-danger"></span>
                                     </div>
-                                </div>
+                                </div>*@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label asp-for="Company.EnrollmentDate" class="control-label">@Localizer["Enrollment Date"]</label>
