--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -18,6 +18,18 @@
                     <h1>@Localizer["Details"]</h1>
                     <div>
                         <h4>@Localizer["Company"]</h4>
+                        <div class="rating-area">
+                            <input type="radio" id="star-5" name="rating" value="5">
+                            <label for="star-5" title="Оценка «5»"></label>
+                            <input type="radio" id="star-4" name="rating" value="4">
+                            <label for="star-4" title="Оценка «4»"></label>
+                            <input type="radio" id="star-3" name="rating" value="3">
+                            <label for="star-3" title="Оценка «3»"></label>
+                            <input type="radio" id="star-2" name="rating" value="2">
+                            <label for="star-2" title="Оценка «2»"></label>
+                            <input type="radio" id="star-1" name="rating" value="1">
+                            <label for="star-1" title="Оценка «1»"></label>
+                        </div>
                         <hr />
                         <dl class="row">
                             <dt class="col-sm-2">
@@ -26,12 +38,12 @@
                             <dd class="col-sm-10">
                                 @Html.DisplayFor(model => model.Company.Title)
                             </dd>
-                            <dt class="col-sm-2">
-                                @Html.DisplayNameFor(model => model.Company.Rank)
-                            </dt>
-                            <dd class="col-sm-10">
-                                @Html.DisplayFor(model => model.Company.Rank)
-                            </dd>
+                            @*<dt class="col-sm-2">
+                                    @Html.DisplayNameFor(model => model.Company.Rank)
+                                </dt>
+                                <dd class="col-sm-10">
+                                    @Html.DisplayFor(model => model.Company.Rank)
+                                </dd>*@
                             <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.Company.EnrollmentDate)
                             </dt>
