--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,7 +11,7 @@
 <br />
 <h5>@Localizer["Companies with the highest rating"]</h5>
 <br />
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -46,7 +46,7 @@
 <br />
 <h5>@Localizer["Updated the company"]</h5>
 <br />
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -81,7 +81,7 @@
 <br />
 <h5>@Localizer["Tags"]</h5>
 <br />
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -110,7 +110,7 @@
 <br />
 <h5>@Localizer["Новости"]</h5>
 <br />
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
