--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,9 +1,8 @@
 ﻿@page
 @model ConfirmEmailModel
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
+
 @{
-    ViewData["Title"] = @Localizer["Confirm email"];
+    ViewData["Title"] = "Confirmemail";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Подтверждение электронной почты</h1>
