--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,12 +4,9 @@
     ViewData["Title"] = "Company";
 }
 
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-
-<h1>@Localizer["Coumpany"]</h1>
+<h1>Компании</h1>
 <br />
-<h5>@Localizer["Companies with the highest rating"]</h5>
+<h5>Компании с самым высоким рейтингом</h5>
 <br />
 <table class="table table-hover">
     <thead>
@@ -44,7 +41,7 @@
     </tbody>
 </table>
 <br />
-<h5>@Localizer["Updated the company"]</h5>
+<h5>Обновленные компании</h5>
 <br />
 <table class="table table-hover">
     <thead>
@@ -79,7 +76,7 @@
     </tbody>
 </table>
 <br />
-<h5>@Localizer["Tags"]</h5>
+<h5>Тэги</h5>
 <br />
 <table class="table table-hover">
     <thead>
@@ -108,7 +105,7 @@
     </tbody>
 </table>
 <br />
-<h5>@Localizer["Новости"]</h5>
+<h5>Новости</h5>
 <br />
 <table class="table table-hover">
     <thead>
