--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,24 +1,23 @@
 ﻿@page
 @model ForgotPasswordModel
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
+
 @{
-    ViewData["Title"] = @Localizer["Forgot your password?"];
+    ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>@Localizer["Enter your email."]</h4>
+<h1>Забыли свой пароль?</h1>
+<h4>Введите свой адрес электронной почты.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email">@Localizer["Email"]</label>
+                <label asp-for="Input.Email">Почта</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">@Localizer["Submit"]</button>
+            <button type="submit" class="btn btn-primary">Подтвердить</button>
         </form>
     </div>
 </div>
