--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,23 +1,22 @@
 ﻿@page
 @model LogoutModel
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
+
 @{
-    ViewData["Title"] = @Localizer["Log out"];
+    ViewData["Title"] = "Log out";
 }
 
 <header>
-    <h1>@ViewData["Title"]</h1>
+    <h1>Выйти из системы</h1>
     @{
         if (User.Identity.IsAuthenticated)
         {
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">@Localizer["Click here to Logout"]</button>
+                <button type="submit" class="nav-link btn btn-link text-dark">Нажмите здесь, чтобы выйти из системы</button>
             </form>
         }
         else
         {
-            <p>@Localizer["You have successfully logged out of the application."]</p>
+            <p>Вы успешно вышли из приложения.</p>
         }
     }
 </header>
