--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,28 +1,27 @@
 ﻿@page
 @model PersonalDataModel
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
+
 @{
-    ViewData["Title"] = @Localizer["Personal Data"];
+    ViewData["Title"] = "PersonalModel";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h4>@ViewData["Title"]</h4>
+<h4>Личные Данные</h4>
 
 <div class="row">
     <div class="col-md-6">
-        <p>@Localizer["Your account contains personal data that you have given us. This page allows you to download or delete that data."]</p>
+        <p>Ваша учетная запись содержит персональные данные, которые вы нам предоставили. Эта страница позволяет вам загрузить или удалить эти данные.</p>
         <p>
-            <strong>@Localizer["Deleting this data will permanently remove your account, and this cannot be recovered."]</strong>
+            <strong>Удаление этих данных приведет к необратимому удалению вашей учетной записи, и это не может быть восстановлено.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">@Localizer["Download"]</button>
+            <button class="btn btn-primary" type="submit">Скачать</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">@Localizer["Delete"]</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">Удалить</a>
         </p>
         <p>
-            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
+            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">Компании</a>
         </p>
     </div>
 </div>
