--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,40 +1,39 @@
 ﻿@page
 @model RegisterModel
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Register";
 }
 
-<h1>@Localizer["Register"]</h1>
+<h1>Зарегистрироватся</h1>
 
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>@Localizer["Создайте новую учетную запись"]</h4>
+            <h4>Создайте новую учетную запись</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email">@Localizer["Email"]</label>
+                <label asp-for="Input.Email">Почта</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password">@Localizer["Password"]</label>
+                <label asp-for="Input.Password">Пароль</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword">@Localizer["Confirm Password"]</label>
+                <label asp-for="Input.ConfirmPassword">Подтвердите Пароль</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">@Localizer["Register"]</button>
+            <button type="submit" class="btn btn-primary">Зарегистрироватся</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>@Localizer["Use another service to register"]</h4>
+            <h4>Используйте другой сервис для регистрации</h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
