--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,13 +1,12 @@
 ﻿@page
 @model ResetPasswordModel
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
+
 @{
-    ViewData["Title"] = @Localizer["Reset password"];
+    ViewData["Title"] = "Reset password";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>@Localizer["Reset your password."]</h4>
+<h1>Сброс пароля</h1>
+<h4>Сбросьте свой пароль.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,21 +14,21 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="Input.Code" type="hidden" />
             <div class="form-group">
-                <label asp-for="Input.Email">@Localizer["Email"]</label>
+                <label asp-for="Input.Email">Почта</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password">@Localizer["Password"]</label>
+                <label asp-for="Input.Password">Пароль</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword">@Localizer["Confirm Password"]</label>
+                <label asp-for="Input.ConfirmPassword">Подтвердите Пароль</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">@Localizer["Reset"]</button>
+            <button type="submit" class="btn btn-primary">Сброс</button>
         </form>
     </div>
 </div>
