--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -5,19 +5,13 @@
     ViewData["Title"] = "Create";
 }
 
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-
-<link rel="stylesheet" href="/css/DragAndDrop.css">
-
 <div class="container-fluid">
     <div class="container">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>@Localizer["Create"]</h1>
-
-                    <h4>@Localizer["Company"]</h4>
+                    <h1>Создании</h1>
+                    <h4>Компании</h4>
                     <hr />
                     <div class="row">
                         <div class="col-md-12">
@@ -25,28 +19,28 @@
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.CompanyID" class="control-label">@Localizer["Company ID"]</label>
+                                        <label asp-for="Company.CompanyID" class="control-label">Company ID</label>
                                         <input asp-for="Company.CompanyID" class="form-control" />
                                         <span asp-validation-for="Company.CompanyID" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.Title" class="control-label">@Localizer["Title"]</label>
+                                        <label asp-for="Company.Title" class="control-label">Название</label>
                                         <input asp-for="Company.Title" class="form-control" />
                                         <span asp-validation-for="Company.Title" class="text-danger"></span>
                                     </div>
                                 </div>
-                                @*<div class="col-md-6">
+                                <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.Rank" class="control-label">@Localizer["Rank"]</label>
+                                        <label asp-for="Company.Rank" class="control-label">Рейтинг</label>
                                         <input asp-for="Company.Rank" class="form-control" />
                                         <span asp-validation-for="Company.Rank" class="text-danger"></span>
                                     </div>
-                                </div>*@
+                                </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.EnrollmentDate" class="control-label">@Localizer["Enrollment Date"]</label>
+                                        <label asp-for="Company.EnrollmentDate" class="control-label">Дата Регистрации</label>
                                         <input asp-for="Company.EnrollmentDate" class="form-control" />
                                         <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
                                     </div>
@@ -54,16 +48,16 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <div class="form-group">
-                                            <h5 asp-for="Company.Thematics" class="control-label">@Localizer["Thematics"]</h5>
+                                            <h5 asp-for="Company.Thematics" class="control-label">Тематика</h5>
                                             <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
-                                                <option selected>@Localizer["Choose the topic of your company"]</option>
-                                                <option>@Localizer["Education"]</option>
-                                                <option>@Localizer["Animals"]</option>
-                                                <option>@Localizer["Human rights"]</option>
-                                                <option>@Localizer["Nature"]</option>
-                                                <option>@Localizer["Culture"]</option>
-                                                <option>@Localizer["Game"]</option>
-                                                <option>@Localizer["Other"]</option>
+                                                <option selected>Выберите тематику вашей компании</option>
+                                                <option>Образование</option>
+                                                <option>Животные</option>
+                                                <option>Права человека</option>
+                                                <option>Природа</option>
+                                                <option>Культура</option>
+                                                <option>Игры</option>
+                                                <option>Другое</option>
                                             </select>
                                             <span asp-validation-for="Company.Thematics" class="text-danger"></span>
                                         </div>
@@ -71,21 +65,21 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.Bonus" class="control-label">@Localizer["Bonus"]</label>
+                                        <label asp-for="Company.Bonus" class="control-label">Бонус</label>
                                         <input asp-for="Company.Bonus" class="form-control" />
                                         <span asp-validation-for="Company.Bonus" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-group">
-                                        <label asp-for="Company.Description" class="control-label">@Localizer["Description"]</label>
+                                        <label asp-for="Company.Description" class="control-label">Описание</label>
                                         <textarea asp-for="Company.Description" class="form-control"></textarea>
                                         <span asp-validation-for="Company.Description" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.Images" class="control-label">@Localizer["Images"]</label>
+                                        <label asp-for="Company.Images" class="control-label">Изображения</label>
                                         <div class="input-group mb-3">
                                             <input asp-for="Company.Images" type="file" class="form-control" id="inputGroupFile01">
                                         </div>
@@ -93,7 +87,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.Video" class="control-label">@Localizer["Video"]</label>
+                                        <label asp-for="Company.Video" class="control-label">Видео</label>
                                         <div class="input-group mb-3">
                                             <span asp-for="Company.Video" class="input-group-text" id="basic-addon3">https://example.com/users/</span>
                                             <input asp-for="Company.Video" type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
@@ -102,28 +96,28 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.Topic" class="control-label">@Localizer["Topic"]</label>
+                                        <label asp-for="Company.Topic" class="control-label">Новости</label>
                                         <input asp-for="Company.Topic" class="form-control" />
                                         <span asp-validation-for="Company.Topic" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-group">
-                                        <label asp-for="Company.News" class="control-label">@Localizer["News"]</label>
+                                        <label asp-for="Company.News" class="control-label">Описание</label>
                                         <textarea asp-for="Company.News" class="form-control"></textarea>
                                         <span asp-validation-for="Company.News" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.Price" class="control-label">@Localizer["Price"]</label>
+                                        <label asp-for="Company.Price" class="control-label">Цена</label>
                                         <input asp-for="Company.Price" class="form-control" />
                                         <span asp-validation-for="Company.Price" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label asp-for="Company.Tags" class="control-label">@Localizer["Tags"]</label>
+                                        <label asp-for="Company.Tags" class="control-label">Тэги</label>
                                         <input asp-for="Company.Tags" class="form-control" />
                                         <span asp-validation-for="Company.Tags" class="text-danger"></span>
                                     </div>
@@ -137,7 +131,7 @@
                         </div>
                     </div>
                     <div>
-                        <a asp-page="Index">@Localizer["Back to List"]</a>
+                        <a asp-page="Index">Вернуться к списку</a>
                     </div>
                 </div>
             </div>
