--- a/Pages/Company/Delete.cshtml
+++ b/Pages/Company/Delete.cshtml
@@ -5,21 +5,16 @@
     ViewData["Title"] = "Delete";
 }
 
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-
 <div class="container-fluid">
     <div class="container">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>@Localizer["Delete"]</h1>
-
+                    <h1>Удаление</h1>
                     <p class="text-danger">@Model.ErrorMessage</p>
-
-                    <h3>@Localizer["Are you sure you want to delete this?"]</h3>
+                    <h3>Вы уверены, что хотите удалить это?</h3>
                     <div>
-                        <h4>@Localizer["Company"]</h4>
+                        <h4>Компании</h4>
                         <hr />
                         <dl class="row">
                             <dt class="col-sm-2">
@@ -95,11 +90,10 @@
                                 @Html.DisplayFor(model => model.Company.Tags)
                             </dd>
                         </dl>
-
                         <form method="post">
                             <input type="hidden" asp-for="Company.ID" />
                             <input type="submit" value="Delete" class="btn btn-danger" /> |
-                            <a asp-page="./Index">@Localizer["Back to List"]</a>
+                            <a asp-page="./Index">Вернуться к списку</a>
                         </form>
                     </div>
                 </div>
