--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -5,9 +5,6 @@
     ViewData["Title"] = "Details";
 }
 
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-
 <link rel="stylesheet" href="/css/rating.css">
 
 <div class="container-fluid">
@@ -15,18 +12,18 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>@Localizer["Details"]</h1>
+                    <h1>Детали</h1>
                     <div>
-                        <h4>@Localizer["Company"]</h4>
+                        <h4>Компании</h4>
                         <div class="rating-area">
                             <input type="radio" id="star-5" name="rating" value="5">
-                            <label for="star-5" title="Оценка «5»"></label>
+                            <label for="star-5" title="Оценка «5»"></label>	
                             <input type="radio" id="star-4" name="rating" value="4">
-                            <label for="star-4" title="Оценка «4»"></label>
+                            <label for="star-4" title="Оценка «4»"></label>    
                             <input type="radio" id="star-3" name="rating" value="3">
-                            <label for="star-3" title="Оценка «3»"></label>
+                            <label for="star-3" title="Оценка «3»"></label>  
                             <input type="radio" id="star-2" name="rating" value="2">
-                            <label for="star-2" title="Оценка «2»"></label>
+                            <label for="star-2" title="Оценка «2»"></label>    
                             <input type="radio" id="star-1" name="rating" value="1">
                             <label for="star-1" title="Оценка «1»"></label>
                         </div>
@@ -38,12 +35,12 @@
                             <dd class="col-sm-10">
                                 @Html.DisplayFor(model => model.Company.Title)
                             </dd>
-                            @*<dt class="col-sm-2">
+                            <dt class="col-sm-2">
                                     @Html.DisplayNameFor(model => model.Company.Rank)
                                 </dt>
                                 <dd class="col-sm-10">
                                     @Html.DisplayFor(model => model.Company.Rank)
-                                </dd>*@
+                                </dd>
                             <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.Company.EnrollmentDate)
                             </dt>
@@ -115,11 +112,13 @@
                         <img alt="" border="0" src="https://www.paypal.com/en_BY/i/scr/pixel.gif" width="1" height="1" />
                     </form>
                     <div>
-                        <a asp-page="./Edit" asp-route-id="@Model.Company.ID">@Localizer["Edit"]</a> |
-                        <a asp-page="./Index">@Localizer["Back to List"]</a>
+                        <a asp-page="./Edit" asp-route-id="@Model.Company.ID">Редактировать</a> |
+                        <a asp-page="./Index">Вернуться к списку</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript" src="/css/rating.css"></script>
