--- a/Pages/Error.cshtml
+++ b/Pages/Error.cshtml
@@ -1,33 +1,26 @@
 ﻿@page
 @model ErrorModel
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">@Localizer["Error."]</h1>
-<h2 class="text-danger">@Localizer["An error occurred while processing your request."]</h2>
+<h1 class="text-danger">Ошибка</h1>
+<h2 class="text-danger">При обработке вашего запроса произошла ошибка.</h2>
 
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>@Localizer["Request ID:"]</strong> <code>@Model.RequestId</code>
+        <strong>Request ID:</strong> <code>@Model.RequestId</code>
     </p>
 }
 
-<h3>@Localizer["Development Mode"]</h3>
+<h3>Режим разработки</h3>
 <p>
-    @Localizer["Swapping to the"] <strong>@Localizer["Development"]</strong> @Localizer["environment displays detailed information about the error that occurred."]
+    При переходе в среду разработки отображается подробная информация о возникшей ошибке.
 </p>
 <p>
-    <strong>@Localizer["The Development environment shouldn't be enabled for deployed applications."]</strong>
-    @Localizer["It can result in displaying sensitive information from exceptions to end users."]
-    @Localizer["For local debugging, enable the"]
-    <strong>@Localizer["Development"]</strong>
-    @Localizer["environment by setting the"]
-    <strong>@Localizer["ASPNETCORE_ENVIRONMENT"]</strong>
-    @Localizer["environment variable to"]
-    <strong>@Localizer["Development"]</strong>
-    @Localizer["and restarting the app."]
+    Среда разработки не должна быть включена для развернутых приложений. 
+    Это может привести к отображению конфиденциальной информации от исключений конечным пользователям. 
+    Для локальной отладки включите среду разработки, установив переменную среды ASPNETCORE_ENVIRONMENT в значение Development и перезапустив приложение.
 </p>
