--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -1,10 +1,9 @@
 ﻿@page
 @model PrivacyModel
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-@{
-    ViewData["Title"] = @Localizer["Privacy Policy"];
-}
-<h1>@ViewData["Title"]</h1>
 
-<p>@Localizer["Use this page to detail your site's privacy policy."]</p>
+@{
+    ViewData["Title"] = "Privacy Policy";
+}
+<h1>Политика Конфиденциальности</h1>
+
+<p>Используйте эту страницу для детализации политики конфиденциальности вашего сайта.</p>
