--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,13 +24,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
-                        </li>
-                        <li class="nav-item">
-                            <button id="theme-button" type="button" name="Topic" class="form-control">@Localizer["Topic"]</button>
-                        </li>
-                        <li class="nav-item">
-                            <button id="language-button" type="button" name="Language" class="form-control">@Localizer["Language"]</button>
+                            <button id="theme-button" type="button" name="Topic" class="form-control">Тема</button>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -46,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">@Localizer["Privacy Policy"]</a>
+            &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">Политика Конфиденциальности</a>
         </div>
     </footer>
 
