--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -5,4 +5,4 @@
     ViewData["Title"] = "Confirmemail";
 }
 
-<h1>Подтверждение электронной почты</h1>
+<h1>Вы успешно подтвердили электронную почту</h1>
