--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -56,10 +56,10 @@
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
+                                    <p>
+                                        Внешние службы аутентификации не настроены. См. <a href="https://go.microsoft.com/fwlink/?LinkID=532715">эту статью</a>
+                                        для получения более подробной информации о настройке этого ASP.NET приложение для поддержки входа в систему через внешние службы.
+                                    </p>
                     </div>
                 }
                 else
