--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -21,7 +21,7 @@
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">Удалить</a>
         </p>
         <p>
-            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">Компании</a>
+            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">Перейти к своим компаниям</a>
         </p>
     </div>
 </div>
